// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableView Should open remediation modal 1`] = `
<React.Fragment>
  <React.Fragment>
    <React.Fragment>
      <PrimaryToolbar
        actionsConfig={
          {
            "actions": [
              <AsyncRemediationButton
                isDisabled={true}
                remediationProvider={[MockFunction]}
              />,
            ],
          }
        }
        activeFiltersConfig={
          {
            "deleteTitle": "Reset filters",
            "filters": [],
            "onDelete": [Function],
          }
        }
        bulkSelect={
          {
            "checked": false,
            "isDisabled": false,
            "items": [
              {
                "onClick": [Function],
                "title": "Select none (0)",
              },
              {
                "onClick": [Function],
                "title": "Select page (0)",
              },
              {
                "onClick": [Function],
                "title": "Select all ()",
              },
            ],
            "onSelect": [Function],
            "toggleProps": {
              "children": "     0 selected",
              "data-ouia-component-type": "bulk-select-toggle-button",
            },
          }
        }
        exportConfig={
          {
            "isDisabled": false,
            "onSelect": [MockFunction],
          }
        }
        filterConfig={
          {
            "items": [
              {
                "label": "First filter",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ],
          }
        }
        pagination={
          {
            "isCompact": true,
            "isDisabled": false,
            "itemCount": undefined,
            "onPerPageSelect": [MockFunction],
            "onSetPage": [MockFunction],
            "ouiaId": "top-undefined",
            "page": NaN,
            "perPage": undefined,
          }
        }
      />
      <Table
        actionsMenuAppendTo="inline"
        aria-label="Patch table view"
        borders={true}
        canCollapseAll={false}
        canSelectAll={false}
        canSortFavorites={true}
        cells={[]}
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={true}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={[]}
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
      <TableFooter
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        page={NaN}
        paginationOUIA="bottom-undefined"
      />
    </React.Fragment>
  </React.Fragment>
</React.Fragment>
`;

exports[`TableView TableView 1`] = `
<React.Fragment>
  <React.Fragment>
    <React.Fragment>
      <PrimaryToolbar
        actionsConfig={
          {
            "actions": [
              <AsyncRemediationButton
                isDisabled={true}
                remediationProvider={[MockFunction]}
              />,
            ],
          }
        }
        activeFiltersConfig={
          {
            "deleteTitle": "Reset filters",
            "filters": [],
            "onDelete": [Function],
          }
        }
        bulkSelect={
          {
            "checked": false,
            "isDisabled": false,
            "items": [
              {
                "onClick": [Function],
                "title": "Select none (0)",
              },
              {
                "onClick": [Function],
                "title": "Select page (0)",
              },
              {
                "onClick": [Function],
                "title": "Select all ()",
              },
            ],
            "onSelect": [Function],
            "toggleProps": {
              "children": "     0 selected",
              "data-ouia-component-type": "bulk-select-toggle-button",
            },
          }
        }
        exportConfig={
          {
            "isDisabled": false,
            "onSelect": [MockFunction],
          }
        }
        filterConfig={
          {
            "items": [
              {
                "label": "First filter",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ],
          }
        }
        pagination={
          {
            "isCompact": true,
            "isDisabled": false,
            "itemCount": undefined,
            "onPerPageSelect": [MockFunction],
            "onSetPage": [MockFunction],
            "ouiaId": "top-undefined",
            "page": NaN,
            "perPage": undefined,
          }
        }
      />
      <Table
        actionsMenuAppendTo="inline"
        aria-label="Patch table view"
        borders={true}
        canCollapseAll={false}
        canSelectAll={false}
        canSortFavorites={true}
        cells={[]}
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={true}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={[]}
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
      <TableFooter
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        page={NaN}
        paginationOUIA="bottom-undefined"
      />
    </React.Fragment>
  </React.Fragment>
</React.Fragment>
`;

exports[`TableView TableView 2`] = `
<React.Fragment>
  <React.Fragment>
    <React.Fragment>
      <PrimaryToolbar
        actionsConfig={
          {
            "actions": [
              <AsyncRemediationButton
                isDisabled={true}
                remediationProvider={[MockFunction]}
              />,
            ],
          }
        }
        activeFiltersConfig={
          {
            "deleteTitle": "Reset filters",
            "filters": [],
            "onDelete": [Function],
          }
        }
        bulkSelect={
          {
            "checked": false,
            "isDisabled": false,
            "items": [
              {
                "onClick": [Function],
                "title": "Select none (0)",
              },
              {
                "onClick": [Function],
                "title": "Select page (0)",
              },
              {
                "onClick": [Function],
                "title": "Select all ()",
              },
            ],
            "onSelect": [Function],
            "toggleProps": {
              "children": "     0 selected",
              "data-ouia-component-type": "bulk-select-toggle-button",
            },
          }
        }
        exportConfig={
          {
            "isDisabled": false,
            "onSelect": [MockFunction],
          }
        }
        filterConfig={
          {
            "items": [
              {
                "label": "First filter",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ],
          }
        }
        pagination={
          {
            "isCompact": true,
            "isDisabled": false,
            "itemCount": undefined,
            "onPerPageSelect": [MockFunction],
            "onSetPage": [MockFunction],
            "ouiaId": "top-undefined",
            "page": NaN,
            "perPage": undefined,
          }
        }
      />
      <Table
        actionsMenuAppendTo="inline"
        aria-label="Patch table view"
        borders={true}
        canCollapseAll={false}
        canSelectAll={false}
        canSortFavorites={true}
        cells={[]}
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={true}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={[]}
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
      <TableFooter
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        page={NaN}
        paginationOUIA="bottom-undefined"
      />
    </React.Fragment>
  </React.Fragment>
</React.Fragment>
`;

exports[`TableView test table props TableView 1`] = `
<React.Fragment>
  <React.Fragment>
    <React.Fragment>
      <PrimaryToolbar
        actionsConfig={
          {
            "actions": [
              <AsyncRemediationButton
                isDisabled={true}
                remediationProvider={[MockFunction]}
              />,
            ],
          }
        }
        activeFiltersConfig={
          {
            "deleteTitle": "Reset filters",
            "filters": [],
            "onDelete": [Function],
          }
        }
        bulkSelect={
          {
            "checked": false,
            "isDisabled": false,
            "items": [
              {
                "onClick": [Function],
                "title": "Select none (0)",
              },
              {
                "onClick": [Function],
                "title": "Select page (0)",
              },
              {
                "onClick": [Function],
                "title": "Select all (10)",
              },
            ],
            "onSelect": [Function],
            "toggleProps": {
              "children": "     0 selected",
              "data-ouia-component-type": "bulk-select-toggle-button",
            },
          }
        }
        exportConfig={
          {
            "isDisabled": false,
            "onSelect": [MockFunction],
          }
        }
        filterConfig={
          {
            "items": [
              {
                "label": "First filter",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ],
          }
        }
        pagination={
          {
            "isCompact": true,
            "isDisabled": false,
            "itemCount": 10,
            "onPerPageSelect": [MockFunction],
            "onSetPage": [MockFunction],
            "ouiaId": "top-undefined",
            "page": NaN,
            "perPage": undefined,
          }
        }
      />
      <Table
        actionsMenuAppendTo="inline"
        aria-label="Patch table view"
        borders={true}
        canCollapseAll={false}
        canSelectAll={false}
        canSortFavorites={true}
        cells={[]}
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={true}
        isTreeTable={false}
        onCollapse={[MockFunction]}
        onSelect={[MockFunction]}
        onSort={[MockFunction]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={[]}
        selectVariant="checkbox"
        sortBy={{}}
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
      <TableFooter
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        page={NaN}
        paginationOUIA="bottom-undefined"
        totalItems={10}
      />
    </React.Fragment>
  </React.Fragment>
</React.Fragment>
`;
